fix: update deprecated f5xc-docs-theme import to @f5xc-salesdemos/docs-theme
The theme package was renamed from f5xc-docs-theme to
@f5xc-salesdemos/docs-theme (v2.0.0+). This stale import causes the
Rollup build to fail.

Closes #113

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -9,7 +9,7 @@ hero:
 ---
 
 import { CardGrid } from '@astrojs/starlight/components';
-import LinkCard from 'f5xc-docs-theme/components/LinkCard.astro';
+import LinkCard from '@f5xc-salesdemos/docs-theme/components/LinkCard.astro';
 
 ## Security Solutions
 
