--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -142,6 +142,12 @@ import LinkCard from '@f5xc-salesdemos/docs-theme/components/LinkCard.astro';
     description="CI workflows, governance templates, and repo settings enforcement."
     href="https://f5xc-salesdemos.github.io/docs-control/"
   />
+  <LinkCard
+    icon="hashicorp-flight:docker-color"
+    title="Dev Container"
+    description="Isolated development environment with AI coding tools."
+    href="https://f5xc-salesdemos.github.io/devcontainer/"
+  />
 </CardGrid>
 
 ## AI
